--- a/app/views/pages/_bio.html.erb
+++ b/app/views/pages/_bio.html.erb
@@ -1,4 +1,4 @@
-<section id="bio">
+<section id="bio" style="background-image: linear-gradient(rgba(144, 133, 214,0.55), rgba(144, 133, 214,0.95)), url(<%= image_path ('banner.jpg') %>)">
   <div class="container">
     <h1>Bio</h1>
   </div>
