--- a/app/views/pages/_bio.html.erb
+++ b/app/views/pages/_bio.html.erb
@@ -1,12 +1,6 @@
 <section id="bio" style="background-image: linear-gradient(rgba(144, 133, 214,0.55), rgba(144, 133, 214,0.95)), url(<%= image_path ('banner.jpg') %>)">
   <div class="container">
     <h1>Bio</h1>
-    <p>Riche d'un parcours de 20 ans dans les arts-appliqués, j'ai de nombreuses
-      skills que je peux mettre à profit de ma démarche de développeur : j'ai conçu des produits
-      sur-mesure pour de nombreuses, et pris en charge des projets, depuis la conception
-      jusqu'à la livraison, dans un processus itératif en lien permanent avec le client,
-      dans des secteurs aussi divers que le spectacle, l'événementiel, le luxe,
-      et l'associatif. Les besoins évolutifs, l'adaptation et la réactivité requises,
-    immédiate aux changements de ses besoins, s'apparentent aux méthodes agiles.</p>
+    <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé mes compétences en développement web. Je souhaite mettre à profit de nombreuses skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et exigence qualitative, qui s’apparentent au mode de travail agile.</p>
   </div>
 </section>
