--- a/app/views/pages/_bio.html.erb
+++ b/app/views/pages/_bio.html.erb
@@ -1,6 +1,24 @@
-<section id="bio" style="background-image: linear-gradient(rgba(144, 133, 214,0.55), rgba(144, 133, 214,0.95)), url(<%= image_path ('banner.jpg') %>)">
+<section id="bio" style="background-image: linear-gradient(rgba(212, 206, 191, 0.95), rgba(212, 206, 191, 0.9)), url(<%= image_path ('banner.jpg') %>)">
   <div class="container">
     <h1>Bio</h1>
     <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé mes compétences en développement web. Je souhaite mettre à profit de nombreuses skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et exigence qualitative, qui s’apparentent au mode de travail agile.</p>
+    <div class="row">
+      <div class="col-4"><%= render 'bio_card', link: 'padNetflix.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padHermes.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padRBI.svg'  %></div>
+    </div>
+
+    <div class="row">
+      <div class="col-4"><%= render 'bio_card', link: 'padMar.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padHarrods.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padColline.svg'  %></div>
+    </div>
+
+    <div class="row">
+      <div class="col-4"><%= render 'bio_card', link: 'padNanterre.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padNetflix.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padNetflix.svg'  %></div>
+    </div>
+
   </div>
 </section>
