set tiles transparency

--- a/app/views/pages/_bio.html.erb
+++ b/app/views/pages/_bio.html.erb
@@ -4,20 +4,20 @@
     <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé mes compétences en développement web. Je souhaite mettre à profit de nombreuses skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et exigence qualitative, qui s’apparentent au mode de travail agile.</p>
     <div class="row">
       <div class="col-4"><%= render 'bio_card', link: 'padNetflix.svg'  %></div>
-      <div class="col-4"><%= render 'bio_card', link: 'padHermes.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padMar.svg'  %></div>
       <div class="col-4"><%= render 'bio_card', link: 'padRBI.svg'  %></div>
     </div>
 
     <div class="row">
-      <div class="col-4"><%= render 'bio_card', link: 'padMar.svg'  %></div>
-      <div class="col-4"><%= render 'bio_card', link: 'padHarrods.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padNanterre.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padHermes.svg'  %></div>
       <div class="col-4"><%= render 'bio_card', link: 'padColline.svg'  %></div>
     </div>
 
     <div class="row">
-      <div class="col-4"><%= render 'bio_card', link: 'padNanterre.svg'  %></div>
-      <div class="col-4"><%= render 'bio_card', link: 'padNetflix.svg'  %></div>
-      <div class="col-4"><%= render 'bio_card', link: 'padNetflix.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padHarrods.svg'  %></div>
+      <div class="col-4"><%= render 'bio_card', link: 'padColombier.svg'  %></div>
+      <!--<div class="col-4"><%= render 'bio_card', link: 'padNetflix.svg'  %></div>-->
     </div>
 
   </div>
