--- a/app/views/pages/_bio.html.erb
+++ b/app/views/pages/_bio.html.erb
@@ -1,4 +1,4 @@
-<section id="bio" style="background-image: linear-gradient(rgba(212, 206, 191, 0.95), rgba(212, 206, 191, 0.9)), url(<%= image_path ('banner.jpg') %>)">
+<section id="bio" style="background-image: linear-gradient(rgba(10, 3, 130,0.25), rgba(10, 3, 130, 0.85)), url(<%= image_path ('banner.jpg') %>)">
   <div class="container">
     <h1>Bio</h1>
     <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé mes compétences en développement web. Je souhaite mettre à profit de nombreuses skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et exigence qualitative, qui s’apparentent au mode de travail agile.</p>
