--- a/app/views/pages/_bio.html.erb
+++ b/app/views/pages/_bio.html.erb
@@ -1,14 +1,14 @@
 <section id="bio" style="background-image: linear-gradient(rgba(10, 3, 130,0.25), rgba(10, 3, 130, 0.85)), url(<%= image_path ('banner.jpg') %>)">
   <div class="container">
     <% bioElt = {
-            netflix: { title: 'Titre Netflix', content: 'Texte Netflix', link: 'padNetflix.svg'},
-            mar: { title: 'Titre MAR', content: 'Texte MAR', link: 'padMar.svg'},
-            RBI: { title: 'Titre RBI', content: 'Texte RBI', link: 'padRBI.svg'},
-            Nanterre: { title: 'Titre Nanterre', content: 'Texte Nanterre', link: 'padNanterre.svg'},
-            Hermes: { title: 'Titre Hermes', content: 'Texte Hermes', link: 'padHermes.svg'},
-            Colline: { title: 'Titre Colline', content: 'Texte Colline', link: 'padColline.svg'},
-            Harrods: { title: 'Titre Harrods', content: 'Texte Harrods', link: 'padHarrods.svg'},
-            Colombier: { title: 'Titre Colombier', content: 'Texte Colombier', link: 'padColombier.svg'}
+            netflix: { title: 'Assistant costumier', content: 'Texte Netflix', link: 'padNetflix.svg'},
+            mar: { title: 'Costumier designer', content: 'Texte MAR', link: 'padMar.svg'},
+            RBI: { title: 'Façade designer', content: 'Texte RBI', link: 'padRBI.svg'},
+            Nanterre: { title: 'Scénographe', content: 'Texte Nanterre', link: 'padNanterre.svg'},
+            Hermes: { title: 'Chargé de production', content: 'Texte Hermes', link: 'padHermes.svg'},
+            Colline: { title: 'Scénographe & Costumier', content: 'Texte Colline', link: 'padColline.svg'},
+            Harrods: { title: 'Scénographe', content: 'Texte Harrods', link: 'padHarrods.svg'},
+            Colombier: { title: 'Scénographe', content: 'Texte Colombier', link: 'padColombier.svg'}
      } %>
     <h1>Bio</h1>
     <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé mes compétences en développement web. Je souhaite mettre à profit de nombreuses skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et exigence qualitative, qui s’apparentent au mode de travail agile.</p>
