--- a/app/views/pages/_bio_card.html.erb
+++ b/app/views/pages/_bio_card.html.erb
@@ -6,12 +6,13 @@
         <div class="back-content middle">
           <h2><%= title  %></h2>
           <span><%= content %></span>
-          <div class="sm">
+
+<!--           <div class="sm">
             <a href="#">X</a>
             <a href="#">X</a>
             <a href="#">X</a>
             <a href="#">X</a>
-          </div>
+          </div> -->
 
       </div>
     </div>
