--- a/app/views/pages/_bio_card.html.erb
+++ b/app/views/pages/_bio_card.html.erb
@@ -20,7 +20,7 @@
   </div>
     <% if user_signed_in? %>
     <div class="admin_options">
-      <%= link_to 'MAJ', bios_edit_path(bio), class:"admin_alternatives" %>
+      <%= link_to 'MAJ', bio_edit_path(bio), class:"admin_alternatives" %>
       <%= link_to 'X', bios_destroy_path(bio), method: :delete, class:"admin_alternatives" %>
     </div>
   <% end %>
