refacto sending only bio

--- a/app/views/pages/_bio.html.erb
+++ b/app/views/pages/_bio.html.erb
@@ -10,7 +10,7 @@
     <% end %>
     <div class="bio_cards">
       <% @bios.each do |bio| %>
-        <%= render 'bio_card', { bio: bio, title: bio.title, content: bio.content, iconLink: bio.iconLink } %>
+        <%= render 'bio_card', { bio: bio } %>
       <% end %>
     </div>
 
