--- a/app/views/pages/_bio_card.html.erb
+++ b/app/views/pages/_bio_card.html.erb
@@ -1,11 +1,11 @@
 <div>
 <div class="bio_card">
-      <div class="front" style="background-image: url(<%= image_path(iconLink) %>)">
+      <div class="front" style="background-image: url(<%= image_path(bio.iconLink) %>)">
       </div>
       <div class="back">
         <div class="back-content middle">
-          <h2><%= title  %></h2>
-          <span><%= content %></span>
+          <h2><%= bio.title  %></h2>
+          <span><%= bio.content %></span>
 
 <!--      <div class="sm">
             <a href="#">X</a>
