--- a/app/views/pages/_bio_card.html.erb
+++ b/app/views/pages/_bio_card.html.erb
@@ -1,6 +1,6 @@
 <div>
 <div class="bio_card">
-      <div class="front" style="background-image: url(<%= image_path(bio.iconLink) %>)">
+      <div class="front" style="background-image: url(<%= image_path(bio.icon) %>)">
       </div>
       <div class="back">
         <div class="back-content middle">
